--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-files = "0.6.5"
 actix-web = "4.5.1"
 lazy_static = "1.4.0"
+reqwest = "0.12.3"
 tera = "1.19.1"
